RESOLVED FIXED216873
media/can-play-av1.html is not spec compliant
https://bugs.webkit.org/show_bug.cgi?id=216873
Summary media/can-play-av1.html is not spec compliant
Philippe Normand
Reported 2020-09-23 05:15:10 PDT
If a valid and supported codec is specified, canPlayType should return "probably", not "" which means not-supported.
Attachments
Patch (6.93 KB, patch)
2020-09-23 05:34 PDT, Philippe Normand
eric.carlson: review+
ews-feeder: commit-queue-
Philippe Normand
Comment 1 2020-09-23 05:34:47 PDT
Philippe Normand
Comment 2 2020-09-23 07:45:19 PDT
Radar WebKit Bug Importer
Comment 3 2020-09-23 07:46:19 PDT
Philippe Normand
Comment 4 2020-09-23 09:56:31 PDT
Landed iOS baseline in r267484.
Note You need to log in before you can comment on or make changes to this bug.