media/can-play-av1.html is not spec compliant https://bugs.webkit.org/show_bug.cgi?id=216873

Reviewed by Eric Carlson.

Source/WebCore:

* platform/graphics/gstreamer/GStreamerRegistryScanner.cpp:
(WebCore::GStreamerRegistryScanner::initialize): Add the "av1" codec in the codecs mapping.

LayoutTests:

* media/media-can-play-av1-expected.txt: Update baseline.
* media/media-can-play-av1.html: Update test and add another few testing invalid codecs.
* platform/glib/TestExpectations: Unflag passing test.
* platform/mac/media/media-can-play-av1-expected.txt: Added. This test is expected to fail on mac.

Canonical link: https://commits.webkit.org/229665@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267474 268f45cc-cd09-0410-ab3c-d52691b4dbfc